fix(CORS): fix Allowed Headers